# mol2mesh

./: .gitignore  LICENSE  README.md  file_parser.py  mol2mesh.py  pyproject.toml  requirements.txt  style.py  surfaces.py
mol2mesh/: __init__.py  mol2mesh.py  style.py
sample_files/: Dopamine.sdf  Estradiol.sdf  Testosterone.sdf
